my-helm-chart/templates/sushi-manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sushi-manager-svc
  namespace: default
spec:
  selector:
    name: sushi-gateway-manager
  ports:
  - name: manager-ui
    port: 5173       
    targetPort: 5173
