my-helm-chart/templates/sushi-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sushi-gateway-svc
  namespace: default
spec:
  type: NodePort
  selector:
    name: sushi-gateway-proxy
  ports:
  - name: https
    port: 8443
    targetPort: 8443
  - name: http
    port: 8081
    targetPort: 8081
    nodePort: 30001
  - name: proxy
    port: 8008
    targetPort: 8008
